--- a/modules/gadgeteer/gadget/Makefile.in
+++ b/modules/gadgeteer/gadget/Makefile.in
@@ -51,8 +51,7 @@ SUBOBJDIR=	$(GADGET_LIBRARY)
 DIRPRFX=	gadget/
 
 # Subdirectories to compile.
-SUBDIR=		Devices/EventWindow	\
-		Devices/Sim		\
+SUBDIR=		Devices		        \
 		Filter                  \
 		Type			\
 		Util
