--- a/modules/jackal/common/jccl/Plugins/Makefile.in
+++ b/modules/jackal/common/jccl/Plugins/Makefile.in
@@ -31,21 +31,31 @@
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
 # -----------------------------------------------------------------------------
-# Makefile.in for config/jccl.  It requires GNU make.
+# Makefile.in for common/jccl/Plugins.  It requires GNU make.
 #
 # Generated for use on @PLATFORM@
 # -----------------------------------------------------------------------------
+default: all
 
-# Include common definitions.
+# Include common definitions here.
 include @topdir@/make.defs.mk
 
-# Prefix for recursive stuff.
-DIRPRFX=	common/jccl/
+includedir=	@includedir@/jccl/Plugins
+srcdir=		@srcdir@
+top_srcdir=	@top_srcdir@
+INSTALL=	@INSTALL@
+SUBOBJDIR=	$(JCCL_COMMON_LIBRARY)
 
-# Subdirectories used for recursion through the source tree.
-SUBDIR=		Plugins		\
-		Util
+SRCS=
 
-$(RECTARGET): recursive
+EXTRA_INCLUDES=	-I$(top_srcdir)/common	\
+		-I$(topdir)/common
 
-include $(MKPATH)/dpp.subdir.mk
+include $(MKPATH)/dpp.obj.mk
+
+# -----------------------------------------------------------------------------
+# Include dependencies generated automatically.
+# -----------------------------------------------------------------------------
+ifndef DO_CLEANDEPEND
+   -include $(DEPEND_FILES)
+endif
