--- a/modules/jackal/plugins/corba_rtrc/build.xml.in
+++ b/modules/jackal/plugins/corba_rtrc/build.xml.in
@@ -1,32 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="jccl_rtrc" default="dist" basedir=".">
+<project name="tweek" default="dist" basedir=".">
    <property name="srcdir" location="@srcdir@" />
    <property name="topdir" location="@topdir@" />
    <property name="debug" value="on" />
    <property name="optimize" value="off" />
 
-   <path id="tweek.classpath">
+   <path id="jccl.classpath">
       <pathelement path="@TWEEK_JARS@" />
-      <pathelement path="@TWEEK_EXT_JARS@" />
+      <pathelement path="@JCCL_JARS@" />
    </path>
 
-   <path id="jccl_config.classpath">
-      <pathelement path="${topdir}/config/jccl_config.jar" />
-   </path>
+   <property name="jccl.classpath" refid="jccl.classpath" />
 
-   <property name="tweek.classpath" refid="tweek.classpath" />
-   <property name="jccl_config.classpath" refid="jccl_config.classpath" />
-
-   <!-- Compile all java sources generated from IDL -->
+   <!-- Compile all Java sources generated from IDL -->
    <target name="compile_idl">
       <javac destdir="."
              deprecation="on"
              debug="${debug}"
              optimize="${optimize}">
          <src path="." />
-         <include name="jccl/*.java" />
+         <include name="jccl/**" />
          <classpath>
-            <pathelement path="${tweek.classpath}" />
+            <pathelement path="${jccl.classpath}" />
          </classpath>
       </javac>
    </target>
@@ -40,18 +35,17 @@
          <src path="${srcdir}" />
          <include name="org/vrjuggler/jccl/rtrc/**" />
          <classpath>
-            <pathelement path="${tweek.classpath}" />
-            <pathelement path="${jccl_config.classpath}" />
-            <pathelement path="jccl/**" />
+            <pathelement path="${jccl.classpath}" />
+            <pathelement path="." />
          </classpath>
       </javac>
    </target>
 
    <!-- Create the distribution jar -->
    <target name="dist" depends="compile_idl,compile">
-      <jar destfile="jccl_rtrc.jar" basedir=".">
-         <include name="org/vrjuggler/jccl/rtrc/**" />
-         <include name="jccl/**/*.class" />
+      <jar destfile="TweekGadget.jar" basedir=".">
+         <include name="org/vrjuggler/jccl/rtrc/*.class" />
+         <include name="rtrc/*.class" />
       </jar>
    </target>
 
@@ -60,6 +54,6 @@
       <delete failonerror="false">
          <fileset dir="org" includes="**/*.class" />
       </delete>
-      <delete file="jccl_rtrc.jar" failonerror="false" />
+      <delete file="TweekGadget.jar" failonerror="false" />
    </target>
 </project>
