--- a/modules/sonix/Makefile.inc.in
+++ b/modules/sonix/Makefile.inc.in
@@ -342,13 +342,9 @@ install-m4:
           $(datadir)/aclocal
 
 # =============================================================================
-# Clean-up targets.  '_cleandepend' removes all the .d files in the Devices
-# directories.  '_clobber' removes the $(BUILDDIR_BASE) and $(LIBDIR_NAME)
+# Clean-up targets.  '_clobber' removes the $(BUILDDIR_BASE) and $(LIBDIR_NAME)
 # directories.
 # =============================================================================
-_cleandepend:
-	@$(MAKE) -C snx/plugins DO_CLEANDEPEND=1 cleandepend
-
 _clobber:
 	@$(MAKE) cleandepend
 	@$(MAKE) clean-links
@@ -357,7 +353,6 @@ _clobber:
 # Define $(_LOCAL_CLOBBER) to inform the shared 'clobber' target that there is
 # a '_clobber' target to be run besides the standard target.
 _LOCAL_CLOBBER=		1
-_LOCAL_CLEANDEP=	1
 
 include $(MKPATH)/dpp.libs.mk
 include $(MKPATH)/dpp.clean.mk
