--- a/modules/sonix/plugins/make.defs.mk.in
+++ b/modules/sonix/plugins/make.defs.mk.in
@@ -107,7 +107,7 @@ DYNAMICLIB_EXT=         @DYNAMICLIB_EXT@
 # -----------------------------------------------------------------------------
 EXTRA_CFLAGS=		$(CFLAGS_DYNLIB)
 EXTRA_CXXFLAGS=		$(CXXFLAGS_DYNLIB)
-EXTRA_DEFS+=		-D_SNX_PLUGIN_BUILD_
+EXTRA_DEFS+=		-D_SNX_PLUGIN_BUILD_ -DNO_SELF_REGISTER
 EXTRA_DEPEND_FLAGS=	-I$(PLUGIN_ROOT_ABS)
 EXTRA_INCLUDES=		-I$(top_srcdir)
 EXTRA_LDFLAGS=		@EXTRA_LDFLAGS@
